<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="144dp"
            android:layout_height="147dp">
            <!-- Foto do titulo -->
            <ImageView
                android:id="@+id/img"
                android:layout_width="200dp"
                android:layout_height="115dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/img_view_book_photo"
                android:src="@drawable/ic_open_book_48dp" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitleBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_view_title_book"
                android:textColor="@color/colorBlack"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/textViewAuthorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="1dp"
                android:text="@string/text_view_author_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewShortDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/text_view_short_description"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:textAppearance="?attr/textAppearanceListItem" />

        </LinearLayout>




    </LinearLayout>


</androidx.cardview.widget.CardView>

