<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context=".View.Fragment.BookDetailsActivity">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="290dp"
    android:fitsSystemWindows="true"
    android:theme="@style/ToolBarWithNavigationBack"
    app:layout_anchor="@+id/appbar"
    app:layout_anchorGravity="top|center">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">


        <ImageView
            android:id="@+id/bookImageViewDetails"
            android:layout_width="400dp"
            android:layout_height="250dp"
            android:contentDescription="TODO"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="center"
            app:srcCompat="@drawable/ic_menu_gallery" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTelaDetalhes"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ToolBarWithNavigationBack"/>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>

<androidx.core.widget.NestedScrollView
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="82dp"
            android:layout_marginLeft="82dp"
            android:layout_marginEnd="82dp"
            android:layout_marginRight="82dp"
            android:gravity="center"
            app:ci_drawable="@drawable/circleindicator_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitleBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/text_view_title_book"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/indicator" />

        <TextView
            android:id="@+id/textViewAuthorsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Autor(es): Kimbelly Ferraz"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleBook" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingButtonAddListFav"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/ic_add_book_list_fav"
            android:src="@drawable/ic_is_favorite_24dp"
            app:layout_anchorGravity="bottom|right|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.692"
            app:layout_constraintStart_toEndOf="@+id/indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewShortDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:text="Lovecraft é considerado um mestre do terror e suas histórias conduzem os leitores por ambientes macabros e impregnados de perversidade...."
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAuthorsName" />


        <TextView
            android:id="@+id/textViewDetalhesEscritoSomente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="16dp"
            android:text="@string/text_view_more_details_book"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewShortDescription"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textViewLongDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:text="Se todo o medo e terror causado pelos contos reunidos no volume I não foram suficientes, a Editora Pandorga lança agora o volume II dos melhores contos de Lovecraft. H. P. Lovecraft é considerado um mestre do terror e suas histórias conduzem os leitores por ambientes macabros e impregnados de perversidade. "
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDetalhesEscritoSomente" />

        <TextView
            android:id="@+id/textViewEditors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Editora: Dom Quixote"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLongDescription" />

        <TextView
            android:id="@+id/textViewPublishDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Publish Date: 2019"
            android:layout_margin="16dp"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEditors"/>

        <TextView
            android:id="@+id/textViewISBNBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="ISBN: 033220303"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPublishDates" />

        <TextView
            android:id="@+id/textViewTagsBookCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="tags: Romance, Terror"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewISBNBook" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

